--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,20 @@
   font-style: normal;
 }
 
-.d-none-1 {
-  background-color: #f08787;
+.morning {
+  background-color: hsl(46, 100%, 73%);
 }
+
+.afternoon {
+  background-color: #eeb438;
+}
+
+.night {
+  background-color: hsl(240, 100%, 10%);
+}
+
+
+
 
 /**
  * General Styles that apply to all
